demo/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: console-demo-resources
  labels:
    app.kubernetes.io/part-of: console-demo-resources
