demo/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: demo-api-svc
  namespace: console-demo-resources
  labels:
    app.kubernetes.io/part-of: console-demo-resources
    app: demo-api
spec:
  selector:
    app: demo-api
  ports:
    - name: http
      port: 8080
      targetPort: 8080
      protocol: TCP
